--- a/develop/blocks/object-slider/object-slider.pug
+++ b/develop/blocks/object-slider/object-slider.pug
@@ -1,22 +1,5 @@
 mixin object-slider()
     +b.SECTION.object-slider
-        +e.data
-            +e.data-top
-                +e.title ТЦ «ЭкоВидное»
-                +e.rating 92,7%
-            +e.data-bottom
-                +e.data-col
-                    +e.data-label Категория
-                    +e.data-value Стрит-ритейл
-                +e.data-col
-                    +e.data-label Стоимость 1 кв. м.
-                    +e.data-value 205 600 ₽
-                +e.data-col
-                    +e.data-label Площадь
-                    +e.data-value 3203 кв.м
-                +e.data-col
-                    +e.data-label Балансовая стоимость
-                    +e.data-value 658 578 000 ₽
         +e.progress
             +object-progress('20%')
         +e.slider
@@ -31,3 +14,22 @@ mixin object-slider()
             +e.slide
                 img(src="images/redesign/objects/object5@3x.jpg", alt="")
         +e.BUTTON.play(data-video-id='1-kG-vDVrkk')
+        +e.data
+            +e.data-top
+                +e.title ТЦ «ЭкоВидное»
+                +e.rating Рейтинг:
+                    span(style='background-color: #7DCB73') A
+            +e.data-bottom
+                +e.data-col
+                    +e.data-label Категория
+                    +e.data-value Стрит-ритейл
+                +e.data-col
+                    +e.data-label Стоимость 1 кв. м.
+                    +e.data-value 205 600 ₽
+                +e.data-col
+                    +e.data-label Площадь
+                    +e.data-value 3203 кв.м
+                +e.data-col
+                    +e.data-label Балансовая стоимость
+                    +e.data-value 658 578 000 ₽
+
