--- a/develop/blocks/authorization/authorization.pug
+++ b/develop/blocks/authorization/authorization.pug
@@ -1,44 +1,17 @@
 mixin authorization()
-    -const loggedIn = true
+    -const loggedIn = false
     +b.authorization
         if !loggedIn
-            +e.A.login(href='#') Вход
+            +e.actions
+                +e.A.action.--main(href='#') Регистрация
+                +e.A.action(href='#') Войти
         else
             +e.logged
                 +e.A.inner-link.feedback-trigger(href='#' title='Документы')
                     +icon('bubble')
                 +e.A.inner-link.__settings(href='./account-page-6.html' title='Настройки')
                     +icon('settings')
-                +e.A.account(href='#' title='admin@aktivo.ru') 
-                    span admin@aktivo.ru
+                //- +e.A.account(href='#' title='admin@aktivo.ru')
+                //-     span admin@aktivo.ru
                 +e.A.exit(href='#')
                     +icon('exit')
-                //- +e.UL.list
-                //-     +e.LI.item
-                //-         +e.A.link(href='/realty') Недвижимость
-                //-             +e.SPAN.icon.--property
-                //-                 img(src="../images/redesign/layout/property.svg", alt="")
-                //-     +e.LI.item
-                //-         +e.A.link(href='/account/questionary') Верификация
-                //-             +e.SPAN.icon.--questionary
-                //-                 img(src="../images/redesign/layout/questionary.svg", alt="")
-                //-     +e.LI.item
-                //-         +e.A.link(href='/account/monitoring') Мониторинг
-                //-             +e.SPAN.icon.--monitoring
-                //-                 img(src="../images/redesign/layout/monitoring.svg", alt="")
-                //-     +e.LI.item
-                //-         +e.A.link(href='/account/documents') Документы
-                //-             +e.SPAN.icon.--documents
-                //-                 img(src="../images/redesign/layout/documents.svg", alt="")
-                //-     +e.LI.item
-                //-         +e.A.link(href='/account/finances') Финансы
-                //-             +e.SPAN.icon.--finances
-                //-                 img(src="../images/redesign/layout/finances.svg", alt="")
-                //-     +e.LI.item
-                //-         +e.A.link(href='/account/settings') Настройки
-                //-             +e.SPAN.icon.--settings
-                //-                 img(src="../images/redesign/layout/settings.svg", alt="")
-                //-     +e.LI.item
-                //-         +e.A.link(href='/logout') Выход
-                //-             +e.SPAN.icon
-                //-                 img(src="../images/redesign/layout/logout.svg", alt="")
