--- a/develop/blocks/lines/lines.scss
+++ b/develop/blocks/lines/lines.scss
@@ -2,7 +2,7 @@
     position: absolute;
     z-index: 9;
     width: 100%;
-    max-width: 1160px;
+    max-width: 1200px;
     height: 100%;
     left: 50%;
     transform: translateX(-50%);
@@ -99,11 +99,11 @@
 @media #{$desktop} {
     .lines {
         &::before {
-            left: 0;
+            left: 20px;
         }
 
         &::after {
-            right: 0;
+            right: 20px;
         }
 
         &.small-right {
@@ -140,7 +140,7 @@
             position: absolute;
             width: 360px;
             height: 100%;
-            left: 400px;
+            left: 420px;
 
             &::before,
             &::after {
