--- a/develop/blocks/object-location/object-location.pug
+++ b/develop/blocks/object-location/object-location.pug
@@ -4,14 +4,15 @@ mixin object-location()
             +title('h2', 'medium')
                 | Расположение
         +e.wrapper
-            +e.main
-                p
-                    | Объект находится в новом жилом микрорайоне Эко Видное, расположенном в Ленинском районе Московской области, в 4 км от Москвы по высокоскоростной трассе М4 «Дон» в городе Видное. Микрорайон имеет выгодное расположение, удобное транспортное сообщение обеспечивается благодаря наличию общественного наземного и железнодорожного транспорта. По планам градостроительства - открытие линии скоростного трамвая и строительство станции в пе-шей доступности от объекта, что в перспективе способствует увеличению покупательского трафика.
-            +e.aside
-                +e.data
-                    +e.data-value 11 269
-                    +e.data-label Домовладений находятся радиусе 500 м
-                +e.data
-                    +e.data-value 5 781 
-                    +e.data-label Домовладений не имеют в пешей доступности других магазинов кроме ТЦ
-        +e.map#map
+            +e.map#map
+            +e.content
+                +e.main
+                    p
+                        | Объект находится в новом жилом микрорайоне Эко Видное, расположенном в Ленинском районе Московской области, в 4 км от Москвы по высокоскоростной трассе М4 «Дон» в городе Видное. Микрорайон имеет выгодное расположение, удобное транспортное сообщение обеспечивается благодаря наличию общественного наземного и железнодорожного транспорта. По планам градостроительства - открытие линии скоростного трамвая и строительство станции в пе-шей доступности от объекта, что в перспективе способствует увеличению покупательского трафика.
+                +e.aside
+                    +e.data
+                        +e.data-value 11 269
+                        +e.data-label Домовладений находятся в радиусе 500&nbsp;м
+                    +e.data
+                        +e.data-value 5 781
+                        +e.data-label Домовладений не имеют в пешей доступности других магазинов кроме ТЦ
