--- a/develop/blocks/object-location/object-location.scss
+++ b/develop/blocks/object-location/object-location.scss
@@ -71,7 +71,7 @@
     }
 
     &__data {
-        margin-bottom: 20px;
+        margin-bottom: 26px;
 
         &:last-child {
             margin-bottom: 0;
@@ -79,16 +79,18 @@
     }
 
     &__data-value {
-        margin-bottom: 5px;
+        margin-bottom: 8px;
 
         color: $theme-color;
-        font-size: 44px;
+        font-size: 34px;
         font-weight: 600;
-        line-height: 1;
+        line-height: 1.2;
     }
 
     &__data-label {
         font-size: 14px;
+
+        max-width: 200px;
     }
 
     &__map {
@@ -96,70 +98,64 @@
         z-index: 12;
         width: calc(100% + 40px);
         margin-left: -20px;
-        height: 364px;
+        height: 480px;
+        margin-bottom: 30px;
+
+        background-color: tan;
     }
 }
 
 @media #{$tablet} {
     .object-location {
-        &__wrapper {
-            display: flex;
-            margin-bottom: 45px;
-        }
+        display: flex;
 
-        &__main {
-            width: calc(55vw - 35px);;
+        &__title {
+            width: 40%;
             flex: 0 0 auto;
-            margin-bottom: 0;
             padding-right: 15px;
         }
 
-        &__aside {
-            width: 30%;
+        &__wrapper {
+            width: 50%;
             flex: 1 1 auto;
-
-            p {
-                max-width: 300px;
-                margin-bottom: 40px;
-            }
-        }
-
-        &__data-value {
-            font-size: 54px;
+            margin-bottom: 0;
         }
 
         &__map {
             width: 100%;
+            height: 380px;
             margin: 0;
-            height: 454px;
+            margin-bottom: 40px;
+        }
+
+        &__content {
+            padding-right: 32px;
         }
     }
 }
 
 @media #{$laptop} {
     .object-location {
-        &__main {
-            padding-right: 45px;
+        &__content {
+            display: flex;
         }
 
-        &__data-value {
-            font-size: 74px;
+        &__main {
+            width: 60%;
+            padding-right: 45px;
+            margin-bottom: 0;
         }
     }
 }
+
 @media #{$desktop} {
     .object-location {
         &__main {
-            padding-right: 60px;
-            width: 750px;
+            padding-right: 75px;
         }
 
-        &__data {
-            margin-bottom: 30px;
-        }
-
-        &__data-value {
-            font-size: 74px;
+        &__title {
+            width: 400px;
         }
     }
 }
