--- a/develop/blocks/object-slider/object-slider.scss
+++ b/develop/blocks/object-slider/object-slider.scss
@@ -2,16 +2,14 @@
     position: relative;
     width: calc(100% + 40px);
     margin-left: -20px;
-    height: 310px;
+
     z-index: 12;
 
     overflow: hidden;
 
     &__data {
-        position: absolute;
         z-index: 1;
         width: 100%;
-        height: 100%;
         top: 0;
         left: 0;
 
@@ -20,53 +18,74 @@
         pointer-events: none;
     }
 
+    &__progress {
+        ~ .object-slider__data .object-slider__data-top {
+            top: 32px;
+            height: 280px;
+        }
+    }
+
     &__data-top {
         position: absolute;
         top: 20px;
+        height: 410px;
         left: 20px;
         right: 20px;
         display: flex;
+        flex-flow: column nowrap;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-start;
 
-        font-size: 19px;
+        font-size: 18px;
         font-weight: 600;
     }
 
     &__title {
-        padding-right: 10px;
+        font-size: 28px;
+    }
+
+    &__rating {
+        span {
+            display: inline-block;
+            margin-left: 6px;
+            width: 24px;
+            height: 24px;
+
+            text-align: center;
+
+            border-radius: 2px;
+        }
     }
 
     &__data-bottom {
-        position: absolute;
-        bottom: 5px;
-        left: 5px;
-        right: 5px;
-
-        display: flex;
-        flex-flow: row wrap;
+        display: table;
+        padding: 20px;
+        color: $text-color;
+        margin-bottom: -32px;
     }
 
     &__data-col {
-        width: 40%;
-        flex: 1 1 auto;
-        margin: 0 12px 15px;
-
-        white-space: nowrap;
+        display: table-row;
+        font-size: 14px;
     }
 
     &__data-label {
-        margin-bottom: 2px;
-        font-size: 12px;
+        display: table-cell;
+        padding-bottom: 20px;
+        padding-right: 12px;
     }
 
     &__data-value {
-        font-size: 14px;
+        display: table-cell;
+        padding-bottom: 20px;
+        font-weight: 500;
+        white-space: nowrap;
     }
 
     &__slider {
         width: 100%;
-        height: 100%;
+        // height: 100%;
+        height: 310px;
 
         &:not(.slick-initialized) {
             overflow: hidden;
@@ -82,7 +101,7 @@
             @include btn-reset;
             position: absolute;
             z-index: 1;
-            top: 40%;
+            top: 50%;
             left: 0;
             width: 25px;
             height: 25px;
@@ -134,11 +153,10 @@
     }
 
     &__play {
+        @include btn-reset;
         position: absolute;
         left: 50%;
-        top: 40%;
-        transform: translate(-50%, -50%);
-        margin-left: 9px;
+        top: 160px;
 
         border-width: 18px 0 18px 36px;
         border-color: $theme-color;
@@ -155,20 +173,63 @@
     .object-slider {
         width: 100%;
         margin: 0;
-        height: 400px;
+        height: 410px;
 
         &__slider {
+            height: 100%;
             .slick-arrow {
                 top: 50%;
             }
         }
 
-        &__play {
-            top: 50%;
+        &__data-top {
+            flex-flow: row nowrap;
+            align-items: center;
+            height: auto;
+        }
+
+        .object-slider__progress ~ .object-slider__data .object-slider__data-top {
+            height: auto;
+        }
+
+        &__data-bottom {
+            position: absolute;
+            padding: 0;
+            margin: 0;
+            bottom: 5px;
+            left: 5px;
+            right: 5px;
+            color: $text-color-white;
+
+            display: flex;
+            flex-flow: row wrap;
         }
 
         &__data-col {
             width: auto;
+            flex: 1 1 auto;
+            margin: 0 12px 15px;
+
+            white-space: nowrap;
+        }
+
+        &__data-label {
+            display: block;
+            padding: 0;
+            margin-bottom: 2px;
+            font-size: 12px;
+        }
+
+        &__data-value {
+            display: block;
+            padding: 0;
+            font-size: 14px;
+        }
+
+        &__play {
+            top: 50%;
+            transform: translateY(-50%);
+            margin-top: 16px;
         }
     }
 }
@@ -193,23 +254,26 @@
         }
 
         &__play {
-            margin-left: 16px;
+            margin-top: 20px;
 
             border-width: 35px 0 35px 70px;
+        }
+
+        &__progress {
+            ~ .object-slider__data .object-slider__data-top {
+                top: 40px;
+            }
         }
 
         &__data-top {
             left: 40px;
             right: 40px;
+            top: 32px;
         }
 
         &__data-bottom {
             left: 28px;
             right: 28px;
-        }
-
-        &__data-top {
-            top: 32px;
         }
 
         &__data-col {
@@ -219,6 +283,15 @@
         &__title,
         &__rating {
             font-size: 34px;
+        }
+
+        &__rating {
+            span {
+                width: 46px;
+                height: 42px;
+
+                border-radius: 3px;
+            }
         }
 
         &__data-label {
@@ -233,6 +306,6 @@
 
 @media #{$desktop} {
     .object-slider {
-        height: 600px;
+        height: 700px;
     }
 }
