--- a/app/css/main.css
+++ b/app/css/main.css
@@ -8596,12 +8596,18 @@ th {
     .object-finances__table tr:first-child td:first-child {
       width: 120px; }
     .object-finances__table tr:first-child .heading {
+      position: absolute;
+      width: 120px;
+      background-color: #fff;
       font-size: 14px;
       font-weight: 600;
       line-height: 1.2;
       white-space: initial; }
     .object-finances__table th {
+      width: 120px;
       vertical-align: top;
+      position: absolute;
+      background-color: #fff;
       font-weight: 500;
       text-align: left;
       font-size: 12px; }
@@ -8775,6 +8781,7 @@ th {
     .object-finances__table tr:first-child td:first-child {
       width: 288px; }
     .object-finances__table tr:first-child .heading {
+      width: 288px;
       padding-left: 24px;
       font-size: 24px;
       margin-top: -2px; }
@@ -9587,7 +9594,7 @@ th {
 .page-navigation {
   position: relative; }
   .page-navigation__wrapper {
-    overflow: hidden;
+    overflow: auto;
     overscroll-behavior-x: contain;
     -ms-scroll-snap-type: x mandatory;
         scroll-snap-type: x mandatory;
@@ -9684,9 +9691,6 @@ th {
     -webkit-transition: color 300ms ease;
     -moz-transition: color 300ms ease;
     transition: color 300ms ease; }
-    .page-navigation__link:hover, .page-navigation__link:active, .page-navigation__link:focus {
-      color: #fed63f;
-      text-decoration: none; }
     .page-navigation__link::before {
       content: '';
       position: absolute;
@@ -9728,7 +9732,10 @@ th {
 
 @media (min-width: 1024px) {
   .page-navigation__link {
-    font-size: 16px; } }
+    font-size: 16px; }
+    .page-navigation__link:hover, .page-navigation__link:focus-visible {
+      color: #fed63f;
+      text-decoration: none; } }
 
 @media (min-width: 1200px) {
   .page-navigation__link {
