--- a/develop/blocks/object-finances/object-finances.scss
+++ b/develop/blocks/object-finances/object-finances.scss
@@ -59,7 +59,9 @@
             }
 
             .heading {
-                // position: absolute;
+                position: absolute;
+                width: 120px;
+                background-color: #fff;
                 // bottom: 35px;
 
                 font-size: 14px;
@@ -70,19 +72,15 @@
         }
 
         th {
-            // height: 30px;
+            width: 120px;
             vertical-align: top;
-            // position: absolute;
+            position: absolute;
+            background-color: #fff;
             // width: 175px;
 
             font-weight: 500;
             text-align: left;
             font-size: 12px;
-
-            // + td {
-            //     padding-left: 175px;
-            //     width: 305px;
-            // }
         }
     }
 
@@ -284,6 +282,7 @@
                 }
 
                 .heading {
+                    width: 288px;
                     padding-left: 24px;
                     font-size: 24px;
                     margin-top: -2px;
