--- a/develop/blocks/object-new/object-new.pug
+++ b/develop/blocks/object-new/object-new.pug
@@ -8,7 +8,7 @@ mixin object-new()
                         +e.A.link.active.current(href='#' data-scroll-to='objectDescription' data-scroll-offset='75') Описание
                         +e.A.link(href='#' data-scroll-to='objectPlans' data-scroll-offset='75') Планировка
                         +e.A.link(href='#' data-scroll-to='objectLocation' data-scroll-offset='75') Расположение
-                        +e.A.link.locked(href='#') Финансы
+                        +e.A.link.locked(href='#' data-tippy-content='И вот почему') Финансы
                             +icon('lock')
                         +e.A.link.locked(href='#') Рассчитать доход
                             +icon('lock')
