--- a/develop/blocks/page-navigation/page-navigation.scss
+++ b/develop/blocks/page-navigation/page-navigation.scss
@@ -2,7 +2,7 @@
     position: relative;
 
     &__wrapper {
-        overflow: hidden;
+        overflow: auto;
         overscroll-behavior-x: contain;
         scroll-snap-type: x mandatory;
         scroll-behavior: smooth;
@@ -91,14 +91,6 @@
 
         transition: color 300ms ease;
 
-        &:hover,
-        &:active,
-        &:focus {
-            color: $theme-color;
-
-            text-decoration: none;
-        }
-
         &::before {
             content: '';
             position: absolute;
@@ -151,6 +143,13 @@
     .page-navigation {
         &__link {
             font-size: 16px;
+
+            &:hover,
+            &:focus-visible {
+                color: $theme-color;
+
+                text-decoration: none;
+            }
         }
     }
 }
